swarm config update
Signed-off-by: Nicola Kabar <nicolaka@gmail.com>

--- a/etc/journalbeat.yml
+++ b/etc/journalbeat.yml
@@ -50,7 +50,7 @@ journalbeat:
   #move_metadata_to_field: ""
 
   # Specific units to monitor.
-  #units: ["httpd.service"]
+  units: ["docker.service"]
 
   #default_type: journal
 
