--- a/docker/journalbeat.yml
+++ b/docker/journalbeat.yml
@@ -7,6 +7,7 @@ journalbeat:
   clean_field_names: true
   convert_to_numbers: false
   move_metadata_to_field: journal
+  units: ["docker.service"]  
 
 name: journalbeat
 
